[package]
name = "srv"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.6"
actix-rt = "2.10.0"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"

clap = { version = "4.5.9", features = ["derive"] }